# carton-caps

./: .gitignore  Makefile  README.md  compose.yml  lefthook.yml  pyproject.toml  pytest.ini  web.Dockerfile
src/: config.py  service.py
src/assistant/: assistant_orchestrator.py  context_manager.py
src/chats/: chat_manager.py  context_manager.py
src/clients/: database_client.py  knowledge_base_client.py  openai_client.py
src/request/chats/: chat.py
src/request/citations/: citation.py
src/request/messages/: create_message_request.py  list_messages_request.py  message.py  moderation_code.py
src/scripts/: initialize_db.py
src/services/: chat_service.py  knowledge_base_service.py  message_service.py
tests/integration/: test_chats.py  test_messages.py
tests/integration/clients/: carton_caps_client.py
tests/unit/assistant/: test_assistant_orchestrator.py  test_context_manager.py
tests/unit/services/: test_knowledge_base_service.py
