[project]
name = "carton-caps"
version = "0.1.0"
description = "Chatbot prototype for Carton Caps."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.116.0",
    "openai==1.95.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pymupdf==1.26.3",
    "requests==2.32.4",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "lefthook==1.12.1",
    "pytest==8.4.1",
    "ruff==0.12.2",
]
